--- a/app/templates/incidents.html
+++ b/app/templates/incidents.html
@@ -1,52 +1,91 @@
 {% extends "base.html" %}
 {% block header %}
 <div class="row mt-5">
-<div class="col-xl-3 col-lg-6">
-              <div class="card card-stats mb-4 mb-xl-0">
-                <div class="card-body">
-                  <div class="row">
+    <div class="col-xl-3 col-lg-6">
+        <div class="card card-stats mb-4 mb-xl-0">
+            <div class="card-body">
+                <div class="row">
                     <div class="col">
-                      <h5 class="card-title text-uppercase text-muted mb-0">Total Incidents</h5>
-                      <span class="h2 font-weight-bold mb-0">{{ incidents|length }}</span>
+                        <h5 class="card-title text-uppercase text-muted mb-0">Total Incidents</h5>
+                        <span class="h2 font-weight-bold mb-0">{{ incidents|length }}</span>
                     </div>
                     <div class="col-auto">
-                      <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
-                        <i class="fa fa-chart-bar"></i>
-                      </div>
+                        <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
+                            <i class="fa fa-chart-bar"></i>
+                        </div>
                     </div>
-                  </div>
-                  <p class="mt-3 mb-0 text-muted text-sm">
+                </div>
+                <p class="mt-3 mb-0 text-muted text-sm">
                     <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
                     <span class="text-nowrap">Since last hour</span>
-                  </p>
-                </div>
-              </div>
+                </p>
             </div>
-            <div class="col-xl-3 col-lg-6">
-              <div class="card card-stats mb-4 mb-xl-0">
-                <div class="card-body">
-                  <div class="row">
+        </div>
+    </div>
+    <div class="col-xl-3 col-lg-6">
+        <div class="card card-stats mb-4 mb-xl-0">
+            <div class="card-body">
+                <div class="row">
                     <div class="col">
-                      <h5 class="card-title text-uppercase text-muted mb-0">Response Time</h5>
-                      <span class="h2 font-weight-bold mb-0">1 Hour</span>
+                        <h5 class="card-title text-uppercase text-muted mb-0">Response Time</h5>
+                        <span class="h2 font-weight-bold mb-0">1 Hour</span>
                     </div>
                     <div class="col-auto">
-                      <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
-                        <i class="fa fa-chart-pie"></i>
-                      </div>
+                        <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
+                            <i class="fa fa-chart-pie"></i>
+                        </div>
                     </div>
-                  </div>
-                  <p class="mt-3 mb-0 text-muted text-sm">
+                </div>
+                <p class="mt-3 mb-0 text-muted text-sm">
                     <span class="text-danger mr-2"><i class="fa fa-arrow-down"></i> 3.48%</span>
                     <span class="text-nowrap">Since last hour</span>
-                  </p>
-                </div>
-              </div>
+                </p>
             </div>
+        </div>
+    </div>
 </div>
 <div style="float:right">
-<button class="btn btn-secondary" type="button">New Incident</button>
+    <button class="btn btn-secondary" data-toggle="modal" data-target="#new-incident-form">New Incident</button>
 </div>
+<div class="modal fade" id="new-incident-form" tabindex="-1" role="dialog" aria-labelledby="new-incident-form" style="display: none;" aria-hidden="true">
+    <div class="modal-dialog modal- modal-dialog-centered modal-sm" role="document">
+        <div class="modal-content">
+            <div class="modal-body p-0">
+                <div class="card bg-secondary shadow border-0">
+                    <div class="card-body px-lg-5 py-lg-5">
+                        <div class="text-center text-muted mb-4">
+                            <h2>New Incident Report</h2>
+                        </div>
+                        <form method="post" role="form">
+                            {{ form.hidden_tag() }}
+                            <div class="form-group mb-3">
+                                <div class="input-group input-group-alternative">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"></span>
+                                    </div>
+                                    <input class="form-control" name="name" placeholder="Incident Name" type="text">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="input-group input-group-alternative">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"></span>
+                                    </div>
+                                    <input class="form-control" name="location" placeholder="Location" type="text">
+                                </div>
+                            </div>
+                            <textarea class="form-control form-control-alternative" rows="3" name="description" placeholder="Description"></textarea>
+                            <div class="text-center">
+                                <button type="submit" class="btn btn-primary my-4">Submit</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
 {% block body %}
 <div class="row mt-5">
@@ -59,7 +98,6 @@
                 <div>
                     <table class="table align-items-center table-dark">
                         <thead class="thead-dark">
-                        {% for incident in incidents %}
                         <tr>
                             <th scope="col">
                                 Pinned
@@ -87,7 +125,7 @@
                         </tr>
                         </thead>
                         <tbody class="list">
-
+                        {% for incident in incidents %}
                         <tr>
                             <th scope="row">
                                 Boop
@@ -118,12 +156,16 @@
                             </td>
                             <td class="completion">
                                 <div class="d-flex align-items-center">
+                                    {% if incident.calculate_task_percentage() == None %}
+                                    None
+                                    {% else %}
                                     <span class="mr-2">{{ incident.calculate_task_percentage() }}%</span>
                                     <div>
                                         <div class="progress">
                                             <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: {{ incident.calculate_task_percentage() }}%;"></div>
                                         </div>
                                     </div>
+                                    {% endif %}
                                 </div>
                             </td>
                             <td class="status">
