--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -13,7 +13,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-top navbar-horizontal navbar-expand-md navbar-dark">
         <div class="container px-4">
-            <a class="navbar-brand" href="../index.html">
+            <a class="navbar-brand" href="../index.html"> <!-- TODO Change -->
                 <img src="../assets/img/brand/white.png" />
             </a>
         </div>
