--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,8 @@
     <link type="text/css" href="/static/css/argon.css" rel="stylesheet">
     <link type="text/css" href="/static/js/plugins/nucleo/css/nucleo.css" rel="stylesheet" />
     <link type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+    {% block css %}
+    {% endblock %}
 </head>
 
 <body class="">
@@ -173,5 +175,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="/static/js/argon.js"></script>
 {{ moment.include_moment() }}
+{% block scripts %}
+{% endblock %}
 </body>
 </html>
