--- a/app/templates/incidents.html
+++ b/app/templates/incidents.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+{% block css %}
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css">
+<link rel="stylesheet" type="text/css" href="/static/css/temp.css">
+{% endblock %}
+
 {% block header %}
 <div class="row mt-5">
     <div class="col-xl-3 col-lg-6">
@@ -47,7 +52,8 @@
 <div style="float:right">
     <button class="btn btn-secondary" data-toggle="modal" data-target="#new-incident-form">New Incident</button>
 </div>
-<div class="modal fade" id="new-incident-form" tabindex="-1" role="dialog" aria-labelledby="new-incident-form" style="display: none;" aria-hidden="true">
+<div class="modal fade" id="new-incident-form" tabindex="-1" role="dialog" aria-labelledby="new-incident-form"
+     style="display: none;" aria-hidden="true">
     <div class="modal-dialog modal- modal-dialog-centered modal-sm" role="document">
         <div class="modal-content">
             <div class="modal-body p-0">
@@ -74,7 +80,8 @@
                                     <input class="form-control" name="location" placeholder="Location" type="text">
                                 </div>
                             </div>
-                            <textarea class="form-control form-control-alternative" rows="3" name="description" placeholder="Description"></textarea>
+                            <textarea class="form-control form-control-alternative" rows="3" name="description"
+                                      placeholder="Description"></textarea>
                             <div class="text-center">
                                 <button type="submit" class="btn btn-primary my-4">Submit</button>
                             </div>
@@ -96,7 +103,7 @@
             </div>
             <div class="table-responsive">
                 <div>
-                    <table class="table align-items-center table-dark">
+                    <table id="incidentTable" class="table align-items-center table-dark">
                         <thead class="thead-dark">
                         <tr>
                             <th scope="col">
@@ -126,7 +133,7 @@
                         </thead>
                         <tbody class="list">
                         {% for incident in incidents %}
-                        <tr>
+                        <tr data-href="{{ url_for('view_incident', deployment_name=deployment_name, incident_name=incident.name, incident_id=incident.id) }}">
                             <th scope="row">
                                 Boop
                             </th>
@@ -145,7 +152,8 @@
                                 {% if incident.assigned_to %}
                                 {% for user in incident.assigned_to %}
                                 <div class="avatar-group">
-                                    <a href="#" class="avatar avatar-sm" data-toggle="tooltip" data-original-title="{{ user.username }}">
+                                    <a href="#" class="avatar avatar-sm" data-toggle="tooltip"
+                                       data-original-title="{{ user.username }}">
                                         <img alt="Avatar" src="{{ user.get_avatar() }}" class="rounded-circle">
                                     </a>
                                 </div>
@@ -162,7 +170,9 @@
                                     <span class="mr-2">{{ incident.calculate_task_percentage() }}%</span>
                                     <div>
                                         <div class="progress">
-                                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: {{ incident.calculate_task_percentage() }}%;"></div>
+                                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="60"
+                                                 aria-valuemin="0" aria-valuemax="100"
+                                                 style="width: {{ incident.calculate_task_percentage() }}%;"></div>
                                         </div>
                                     </div>
                                     {% endif %}
@@ -173,7 +183,8 @@
                             </td>
                             <td class="text-right">
                                 <div class="dropdown">
-                                    <a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <a class="btn btn-sm btn-icon-only text-light" href="#" role="button"
+                                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         <i class="fa fa-ellipsis-v"></i>
                                     </a>
                                     <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
@@ -191,4 +202,23 @@
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block scripts %}
+<script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js "></script>
+<script>
+    $('#incidentTable').dataTable( {
+    "columnDefs": [
+        { "orderable": false, "targets": [0,7] }
+    ]
+    } );
+
+    $(document).on('click', 'td, th', function () {
+        if (!$(this).hasClass('text-right')){
+            window.location = $(this).parent().data("href");
+        }
+    } );
+
+</script>
 {% endblock %}
