--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -33,7 +33,7 @@
                 <div class="card bg-secondary shadow border-0">
                     <div class="card-body px-lg-5 py-lg-5">
                         <div class="text-center text-muted mb-4">
-                            <small>Log in to VOST</small>
+                            <small>Log in to DGVOST</small>
                         </div>
                         <form method="post" role="form">
                             {{ form.hidden_tag() }}
