--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -90,12 +90,12 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link " href="{{ url_for('view_notifications') }}">
-                        <i class="ni ni-pin-3 text-orange"></i> Notifications
+                        <i class="ni ni-single-02 text-orange"></i> Notifications
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link " href="{{ url_for('view_map') }}">
-                        <i class="ni ni-single-02 text-yellow"></i> Map
+                        <i class="ni ni-pin-3 text-yellow"></i> Map
                     </a>
                 </li>
                 <li class="nav-item">
