Added white version of the logo.

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -13,9 +13,9 @@
     <!-- Navbar -->
     <nav class="navbar navbar-top navbar-horizontal navbar-expand-md navbar-dark">
         <div class="container px-4">
-            <a class="navbar-brand" href="../index.html"> <!-- TODO Change -->
-                <img src="../assets/img/brand/white.png" />
-            </a>
+            <div class="navbar-brand">
+                <img src="/static/img/Logos/White.png" />
+            </div>
         </div>
     </nav>
     <!-- Header -->
