--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -13,8 +13,8 @@
     <!-- Navbar -->
     <nav class="navbar navbar-top navbar-horizontal navbar-expand-md navbar-dark">
         <div class="container px-4">
-            <a class="navbar-brand" href="../index.html"> <!-- TODO Change -->
-                <img src="../assets/img/brand/white.png"/>
+            <a class="navbar-brand" href="{{ url_for('view_deployments') }}">
+                <img src="/static/img/Logos/White.png"/>
             </a>
         </div>
     </nav>
