--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,7 +20,7 @@
         </button>
         <!-- Brand -->
         <a class="navbar-brand pt-0" href="{{ url_for('view_deployments') }}">
-            <img src="/static/img/Logo.png" class="navbar-brand-img" alt="Logo">
+            <img src="/static/img/Logos/Default.png" class="navbar-brand-img" alt="Logo">
         </a>
         <!-- User -->
         <ul class="nav align-items-center d-md-none">
@@ -66,7 +66,7 @@
                 <div class="row">
                     <div class="col-6 collapse-brand">
                         <a href="{{ url_for('view_deployments') }}">
-                            <img src="static/img/Logo.png">
+                            <img src="static/img/Logos/Default.png">
                         </a>
                     </div>
                     <div class="col-6 collapse-close">
