Fix errors with no longer using usernames.

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -42,7 +42,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                                     </div>
-                                    <input class="form-control" name="username" placeholder="{% if invalid %}Incorrect Username{% else %}Enter Username{% endif %}" type="text">
+                                    <input class="form-control" name="email" placeholder="{% if invalid %}Incorrect Email{% else %}Enter Email{% endif %}" type="email">
                                 </div>
                             </div>
                             <div class="form-group{% if invalid %} has-danger{% endif %}">
