--- a/app/templates/incident.html
+++ b/app/templates/incident.html
@@ -1,1 +1,133 @@
 {% extends "base.html" %}
+
+{% block header %}
+<div class="row mt-5">
+    <div class="col-xl-3 col-lg-6">
+        <div class="card card-stats mb-4 mb-xl-0">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <h3 class="card-title text-uppercase mb-0">Assigned To</h3>
+                        {% if incident.assigned_to %}
+                        {% for user in incident.assigned_to %}
+                        <div class="avatar-group">
+                            <a href="#" class="avatar avatar-sm" data-toggle="tooltip"
+                               data-original-title="{{ user.username }}">
+                                <img alt="Avatar" src="{{ user.get_avatar() }}" class="rounded-circle">
+                            </a>
+                        </div>
+                        {% endfor %}
+                        {% else %}
+                        Unassigned
+                        {% endif %}
+                    </div>
+                    <div class="col-auto">
+                        <div class="icon icon-shape bg-success text-white rounded-circle shadow">
+                            <i class="fas fa-users"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <p class="mt-3 mb-0 text-muted text-sm">
+                    <span class="text-nowrap">Created {{ moment(incident.created_at).fromNow() }}</span>
+
+                </p>
+            </div>
+        </div>
+    </div>
+        <div class="col-xl-3 col-lg-6">
+        <div class="card card-stats mb-4 mb-xl-0">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <h3 class="card-title text-uppercase mb-0">Completion</h3>
+                        {% if incident.calculate_task_percentage() != None %}
+                        <span class="h5 font-weight-bold mb-0">{% if incident.calculate_task_percentage() == 100 %}Completed{% else %}{{ incident.calculate_task_percentage() }}%{% endif %}</span>
+                        <div>
+                            <div class="progress">
+                                <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="60"
+                                     aria-valuemin="0" aria-valuemax="100"
+                                     style="width: {{ incident.calculate_task_percentage() }}%;"></div>
+                            </div>
+                        </div>
+                        {% else %}
+                        <span class="h5 font-weight-bold mb-0">None</span>
+                        {% endif %}
+                    </div>
+                    <div class="col-auto">
+                        <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
+                            <i class="fas fa-tasks"></i>
+                        </div>
+                    </div>
+                    <p class="mt-3 mb-0 text-muted text-sm">
+                        <span class="text-nowrap">Last updated {{ moment(incident.created_at).fromNow() }}</span>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-xl-3 col-lg-6">
+        <div class="card card-stats mb-4 mb-xl-0">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <h3 class="card-title text-uppercase mb-0">Priority</h3>
+                        <span class="h5 font-weight-bold mb-0">{{ incident.get_priority() }}</span>
+                    </div>
+                    <div class="col-auto">
+                        <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
+                            <i class="fas fa-car-crash"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div style="float:right">
+    <button class="btn btn-warning" data-toggle="modal" data-target="#new-incident-form">Flag To Supervisor</button>
+    <button class="btn btn-success" data-toggle="modal" data-target="#new-incident-form">Mark Incident Complete</button>
+</div>
+{% endblock %}
+
+{% block body %}
+<hr class="my-" style="background-color:white">
+<div class="row mt-5">
+    <div class="col-xl-6 col-lg-6">
+        <div class="card">
+            <div class="card-header bg-gradient-danger"><h3 class="text-white text-uppercase">Incident Overview</h3></div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <h3 class="card-title">{{ incident.name }}</h3>
+                        <p class="card-text"><b>Location:</b> {{ incident.location }}</p>
+                        <p class="card-text"><b>Initial Description:</b> {{ incident.description }}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-xl-6 col-lg-6">
+        <div class="card">
+            <div class="card-header bg-danger"><h3 class="text-white text-uppercase">Tasks</h3></div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        {% if incident.tasks %}
+                        {% for task in incident.tasks %}
+                        <div class="custom-control custom-checkbox mb-3">
+                          <input class="custom-control-input" id="customCheck2" type="checkbox"{% if task.completed %} checked{% endif %}{% if current_user not in task.allocated_to %} disabled{% endif %}>
+                          <label class="custom-control-label" for="customCheck2">{{ task.name }}</label>
+                        </div>
+                        {% endfor %}
+                        {% else %}
+                        <p>None</p>
+                        {% endif %}
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
