--- a/app/templates/incident.html
+++ b/app/templates/incident.html
@@ -1,83 +1,103 @@
 {% extends "base.html" %}
 
-{% block header %}
-<div class="row mt-5">
-    <div class="col-xl-3 col-lg-6">
-        <div class="card card-stats mb-4 mb-xl-0">
+{% block heading %}
+<div>
+    <button class="btn btn-warning" data-toggle="modal" data-target="#flagModal">Flag To Supervisor</button>
+    <button class="btn btn-success" data-toggle="modal" data-target="#markCompleteModal">Mark Incident Complete</button>
+</div>
+{% endblock %}
+
+{% block body %}
+<div class="row">
+    <div class="col-xl-3 col-md-6 mb-4">
+        <div class="card border-left-primary shadow h-100 py-2">
             <div class="card-body">
-                <div class="row">
-                    <div class="col">
-                        <h3 class="card-title text-uppercase mb-1">Assigned To</h3>
+                <div class="row no-gutters align-items-center">
+                    <div class="col mr-2">
+                        <div class="text-s font-weight-bold text-primary text-uppercase mb-1">Assigned To</div>
                         {% if incident.assigned_to %}
                         {% for user in incident.assigned_to %}
                         <div class="avatar-group">
                             <a href="#" class="avatar avatar-sm" data-toggle="tooltip"
-                               data-original-title="{{ user.username }}">
-                                <img alt="Avatar" src="{{ user.get_avatar() }}" class="rounded-circle">
+                               data-original-title="{{ user }}">
+                                <img alt="Avatar" src="{{ user.get_avatar() }}" class="rounded-circle avatar-sm">
                             </a>
                         </div>
                         {% endfor %}
                         {% else %}
-                        Unassigned
+                        <div class="h5 mb-0 font-weight-bold text-gray-800">Unassigned</div>
                         {% endif %}
                     </div>
                     <div class="col-auto">
-                        <div class="icon icon-shape bg-success text-white rounded-circle shadow">
-                            <i class="fas fa-users"></i>
+                        <div class="icon icon-shape bg-primary text-white rounded-circle shadow">
+                            <i class="fas fa-users fa-1fourx"></i>
                         </div>
                     </div>
                 </div>
-                <p class="mt-3 mb-0 text-muted text-sm">
-                    <span class="text-nowrap">Created {{ moment(incident.created_at).fromNow() }}</span>
-                </p>
             </div>
         </div>
     </div>
     {% set percentage = incident.calculate_task_percentage() %}
     {% if percentage != None %}
-    <div class="col-xl-4 col-lg-6">
-        <div class="card card-stats mb-4 mb-xl-0">
+    <div class="col-xl-3 col-md-6 mb-4">
+        <div class="card border-left-success shadow h-100 py-2">
             <div class="card-body">
-                <div class="row">
-                    <div class="col">
-                        <h3 class="card-title text-uppercase mb-4">Completion - {{ percentage }}%</h3>
-                        <div>
-                            <div class="progress">
-                                {% if percentage == 100 %}
-                                <div class="progress-label">
-                                  <span>Tasks completed</span>
+                <div class="row no-gutters align-items-center">
+                    <div class="col mr-2">
+                        <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Tasks</div>
+                        <div class="row no-gutters align-items-center">
+                            <div class="col-auto">
+                                <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">{{ percentage }}%</div>
+                            </div>
+                            <div class="col">
+                                <div class="progress progress-sm mr-2">
+                                    <div class="progress-bar bg-success" role="progressbar"
+                                         style="width: {{ percentage }}%" aria-valuenow="{{ percentage }}"
+                                         aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
-                                {% endif %}
-                                <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="{{ percentage }}"
-                                     aria-valuemin="0" aria-valuemax="100"
-                                     style="width: {{ percentage }}%;"></div>
                             </div>
                         </div>
                     </div>
                     <div class="col-auto">
-                        <div class="icon icon-shape bg-red text-white rounded-circle shadow">
-                            <i class="fas fa-tasks"></i>
+                        <div class="icon icon-shape bg-success text-white rounded-circle shadow">
+                            <i class="fas fa-tasks fa-1fourx"></i>
                         </div>
                     </div>
                 </div>
-                <p class="mt-3 mb-0 text-muted text-sm">
-                    <span class="text-nowrap">Last updated {{ moment(incident.created_at).fromNow() }}</span>
-                </p>
             </div>
         </div>
     </div>
     {% endif %}
-    <div class="col-xl-3 col-lg-6">
-        <div class="card card-stats mb-4 mb-xl-0">
+    <div class="col-xl-3 col-md-6 mb-4">
+        <div class="card border-left-danger shadow h-100 py-2">
             <div class="card-body">
-                <div class="row">
-                    <div class="col">
-                        <h3 class="card-title text-uppercase mb-0">Priority</h3>
-                        <span class="h5 font-weight-bold mb-0">{{ incident.get_priority() }}</span>
+                <div class="row no-gutters align-items-center">
+                    <div class="col mr-2">
+                        <div class="text-xs font-weight-bold text-danger text-uppercase mb-1">Priority</div>
+                        <div class="h5 mb-0 font-weight-bold text-gray-800">{{ incident.get_priority() }}</div>
                     </div>
                     <div class="col-auto">
-                        <div class="icon icon-shape bg-{% if incident.priority == 3 %}red{% elif incident.priority == 2 %}orange{% else %}yellow{% endif %} text-white rounded-circle shadow">
-                            <i class="fas fa-car-crash"></i>
+                        <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
+                            <i class="fas fa-car-crash fa-1fourx"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-xl-3 col-md-6 mb-4">
+        <div class="card border-left-warning shadow h-100 py-2">
+            <div class="card-body">
+                <div class="row no-gutters align-items-center">
+                    <div class="col mr-2">
+                        <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Last Updated</div>
+                        <div class="h5 mb-0 font-weight-bold text-gray-800">{{ moment(incident.last_updated).fromNow()
+                            }}
+                        </div>
+                    </div>
+                    <div class="col-auto">
+                        <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
+                            <i class="far fa-clock fa-1fourx"></i>
                         </div>
                     </div>
                 </div>
@@ -85,14 +105,107 @@
         </div>
     </div>
 </div>
-<div style="float:right">
-    <button class="btn btn-warning" data-toggle="modal" data-target="#new-incident-form">Flag To Supervisor</button>
-    <button class="btn btn-success" data-toggle="modal" data-target="#new-incident-form">Mark Incident Complete</button>
+<div class="row">
+    <div class="col-xl-6 col-lg-7">
+        <div class="card shadow mb-4">
+            <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                <h6 class="m-0 font-weight-bold text-primary">Incident Overview</h6>
+                <div class="dropdown no-arrow">
+                    <a class="dropdown-toggle" href="#" role="button" data-toggle="modal"
+                       data-target="#editOverviewModal">
+                        <i class="fas fa-cog"></i>
+                    </a>
+                    <div class="modal fade" id="editOverviewModal" tabindex="-1" role="dialog"
+                         aria-labelledby="editOverviewModal" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="editOverviewLabel">Edit Overview</h5>
+                                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">×</span>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card-body">
+                <h3 class="font-weight-bold">{{ incident.name }}</h3>
+                <p class="card-text"><b>Location:</b> {{ incident.location }}</p>
+                <p class="card-text"><b>Description:</b> {{ incident.description }}</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-xl-6 col-lg-7">
+        <div class="card shadow mb-4">
+            <div class="card-header py-3 d-flex ">
+                <h6 class="m-0 font-weight-bold text-primary">Tasks</h6>
+            </div>
+            {% if incident.tasks %}
+            <ul class="list-group">
+                {% for task in incident.tasks %}
+                <li class="list-group-item list-group-flush">
+                    <div class="row align-items-center no-gutters">
+                        <div class="col mr-2">
+                            <h6 class="mb-0">
+                                <strong>{{ task.name }} </strong><span class="text-xs">Created {{ moment(task.created_at).fromNow() }}</span>
+                            </h6>
+                            <span class="text-xs">Assigned to {{ task.get_assigned() }}</span>
+                        </div>
+                        <div class="col-auto">
+                            <div class="custom-control custom-checkbox">
+                                <input class="formCheck-1" id="task{{ task.id }}" type="checkbox" {% if task.completed
+                                       %} checked{% endif %}{% if current_user not in task.allocated_to %} disabled{%
+                                       endif %}>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                {% endfor %}
+            </ul>
+            <div class="card-body">
+                {% else %}
+                <div class="card-body">
+                    <p class="card-text">No tasks currently.</p>
+                    {% endif %}
+                    <div class="float-right">
+                        <button class="btn btn-success" data-toggle="modal" data-target="#addTaskModal">Add Task
+                        </button>
+                        <div class="modal fade" id="addTaskModal" tabindex="-1" role="dialog"
+                             aria-labelledby="addTaskModal" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="addTaskLabel">Add Task</h5>
+                                        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">×</span>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="btn btn-warning" data-toggle="modal" data-target="#editTaskModal">Edit Task
+                        </button>
+                        <div class="modal fade" id="editTaskModal" tabindex="-1" role="dialog"
+                             aria-labelledby="editTaskModal" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="editTaskLabel">Edit Task</h5>
+                                        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">×</span>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-{% endblock %}
-
-{% block body %}
-<hr class="my-4 bg-white">
 <div class="row mt-5">
     <div class="col-xl-6 col-lg-6">
         <div class="card">
@@ -117,7 +230,9 @@
                         {% if incident.tasks %}
                         {% for task in incident.tasks %}
                         <div class="custom-control custom-checkbox mb-3">
-                            <input class="custom-control-input" id="customCheck2" type="checkbox"{% if task.completed %} checked{% endif %}{% if current_user not in task.allocated_to %} disabled{% endif %}>
+                            <input class="custom-control-input" id="customCheck2" type="checkbox" {% if task.completed
+                                   %} checked{% endif %}{% if current_user not in task.allocated_to %} disabled{% endif
+                                   %}>
                             <label class="custom-control-label" for="customCheck2">{{ task.name }}</label>
                         </div>
                         {% endfor %}
@@ -125,7 +240,6 @@
                         <p class="card-text">None</p>
                         {% endif %}
                     </div>
-
                 </div>
             </div>
         </div>
@@ -143,6 +257,14 @@
                         {% endfor %}
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-xl-6 col-lg-6">
+        <div class="card">
+            <div class="card-header bg-green"><h3 class="text-white text-uppercase">Updates</h3></div>
+            <div class="card-body">
+                <div id="mapid" style="height: 180px;"></div>
             </div>
         </div>
     </div>
