--- a/app/templates/incidents.html
+++ b/app/templates/incidents.html
@@ -4,60 +4,13 @@
 <link rel="stylesheet" type="text/css" href="/static/css/temp.css">
 {% endblock %}
 
-{% block header %}
-<div class="row mt-5">
-    <div class="col-xl-3 col-lg-6">
-        <div class="card card-stats mb-4 mb-xl-0">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col">
-                        <h5 class="card-title text-uppercase text-muted mb-0">Total Incidents</h5>
-                        <span class="h2 font-weight-bold mb-0">{{ incidents|length }}</span>
-                    </div>
-                    <div class="col-auto">
-                        <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
-                            <i class="fa fa-chart-bar"></i>
-                        </div>
-                    </div>
-                </div>
-                <p class="mt-3 mb-0 text-muted text-sm">
-                    <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
-                    <span class="text-nowrap">Since last hour</span>
-                </p>
-            </div>
-        </div>
-    </div>
-    <div class="col-xl-3 col-lg-6">
-        <div class="card card-stats mb-4 mb-xl-0">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col">
-                        <h5 class="card-title text-uppercase text-muted mb-0">Response Time</h5>
-                        <span class="h2 font-weight-bold mb-0">1 Hour</span>
-                    </div>
-                    <div class="col-auto">
-                        <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
-                            <i class="fa fa-chart-pie"></i>
-                        </div>
-                    </div>
-                </div>
-                <p class="mt-3 mb-0 text-muted text-sm">
-                    <span class="text-danger mr-2"><i class="fa fa-arrow-down"></i> 3.48%</span>
-                    <span class="text-nowrap">Since last hour</span>
-                </p>
-            </div>
-        </div>
-    </div>
-    <div>
-        <h1 class="clock text-white" style="font-size:3.5rem"></h1>
-    </div>
-</div>
-<div style="float:right">
-    <button class="btn btn-secondary" data-toggle="modal" data-target="#new-incident-form">New Incident</button>
+{% block heading %}
+<div >
+    <button class="btn btn-success" data-toggle="modal" data-target="#new-incident-form">New Incident</button>
 </div>
 <div class="modal fade" id="new-incident-form" tabindex="-1" role="dialog" aria-labelledby="new-incident-form"
      style="display: none;" aria-hidden="true">
-    <div class="modal-dialog modal- modal-dialog-centered modal-sm" role="document">
+    <div class="modal-dialog  modal-dialog-centered modal-sm" role="document">
         <div class="modal-content">
             <div class="modal-body p-0">
                 <div class="card bg-secondary shadow border-0">
@@ -68,12 +21,7 @@
                         <form method="post" role="form">
                             {{ form.hidden_tag() }}
                             <div class="form-group mb-3">
-                                <div class="input-group input-group-alternative">
-                                    <div class="input-group-prepend">
-                                        <span class="input-group-text"></span>
-                                    </div>
                                     <input class="form-control" name="name" placeholder="Incident Name" type="text">
-                                </div>
                             </div>
                             <div class="form-group">
                                 <div class="input-group input-group-alternative">
@@ -98,16 +46,76 @@
 {% endblock %}
 
 {% block body %}
-<div class="row mt-5">
-    <div class="col">
-        <div class="card bg-default shadow">
-            <div class="card-header bg-transparent border-0">
-                <h3 class="text-white mb-0">Incidents</h3>
+<div class="row">
+    <div class="col-xl-3 col-md-6 mb-4">
+              <div class="card border-left-primary shadow">
+                <div class="card-body">
+                  <div class="row no-gutters align-items-center">
+                    <div class="col mr-2">
+                      <div class="text-s font-weight-bold text-primary text-uppercase mb-1">Total Incidents</div>
+                        <div class="h5 mb-0 font-weight-bold text-gray-800">{{ incidents|length }}</div>
+                    </div>
+                    <div class="col-auto">
+                      <div class="icon icon-shape bg-primary text-white rounded-circle shadow">
+                      <i class="fas fa-1fourx fa-file"></i>
+                        </div>
+                    </div>
+                  </div>
+                    <p class="mt-3 mb-0 text-muted text-sm">
+                    <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
+                    <span class="text-nowrap">Since last hour</span>
+                </p>
+                </div>
+              </div>
+    </div>
+        <div class="col-xl-3 col-md-6 mb-4">
+              <div class="card border-left-warning shadow">
+                <div class="card-body">
+                  <div class="row no-gutters align-items-center">
+                    <div class="col mr-2">
+                      <div class="text-s font-weight-bold text-warning text-uppercase mb-1">Response Time</div>
+                        <div class="h5 mb-0 font-weight-bold text-gray-800">1 Hour</div>
+                    </div>
+                    <div class="col-auto">
+                        <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
+                            <i class="fas fa-1fourx fa-hourglass-end"></i>
+                        </div>
+                    </div>
+                  </div>
+                    <p class="mt-3 mb-0 text-muted text-sm">
+                    <span class="text-danger mr-2"><i class="fa fa-arrow-down"></i> 3.48%</span>
+                    <span class="text-nowrap">Since last hour</span>
+                </p>
+                </div>
+              </div>
+    </div>
+            <div class="col-xl-3 col-md-6 mb-8">
+              <div class="card border-left-success shadow">
+                <div class="card-body">
+                  <div class="row no-gutters align-items-center">
+                    <div class="col mr-2">
+                      <div class="text-s font-weight-bold text-success text-uppercase mb-1">Active For</div>
+                        <div class="h5 clock mb-0 font-weight-bold text-gray-800"></div>
+                    </div>
+                    <div class="col-auto">
+                        <div class="icon icon-shape bg-success text-white rounded-circle shadow">
+                      <i class="fas fa-1fourx fa-stopwatch"></i>
+                        </div>
+                    </div>
+                  </div>
+                    <p class="mt-3 mb-0 text-muted text-sm">Created {{ moment(deployment.created_at).fromNow() }}</p>
+                </div>
+              </div>
+    </div>
+</div>
+<div class="card shadow mb-4">
+            <div class="card-header py-3">
+              <h6 class="m-0 font-weight-bold text-primary">Incidents</h6>
             </div>
-            <div class="table-responsive">
-                <div>
-                    <table id="incidentTable" class="table align-items-center table-dark">
-                        <thead class="thead-dark">
+            <div class="card-body">
+              <div class="table-responsive">
+                <table class="table row-border" id="dataTable" width="100%" cellspacing="0">
+                  <thead>
                         <tr>
                             <th scope="col">
                                 Pinned
@@ -130,8 +138,6 @@
                             <th scope="col">
                                 Last Updated
                             </th>
-                            <th scope="col"></th>
-
                         </tr>
                         </thead>
                         <tbody class="list">
@@ -139,9 +145,9 @@
                         <tr data-href="{{ url_for('view_incident', deployment_name=deployment_name, incident_name=incident.name, incident_id=incident.id) }}">
                             <th scope="row">
                                 {% if current_user in incident.pinned %}
-                                Beep
+                                <i class="fas fa-thumbtack"></i>
                                 {% else %}
-                                Boop
+                                <i class="fas fa-thumbtack"></i>
                                 {% endif %}
                             </th>
                             <td scope="row">
@@ -160,8 +166,8 @@
                                 {% for user in incident.assigned_to %}
                                 <div class="avatar-group">
                                     <a href="#" class="avatar avatar-sm" data-toggle="tooltip"
-                                       data-original-title="{{ user.username }}">
-                                        <img alt="Avatar" src="{{ user.get_avatar() }}" class="rounded-circle">
+                                       data-original-title="{{ user }}">
+                                        <img alt="Avatar" src="{{ user.get_avatar() }}" class="rounded-circle avatar-sm">
                                     </a>
                                 </div>
                                 {% endfor %}
@@ -191,17 +197,6 @@
                             <td class="status">
                                 {{ moment(incident.last_updated).fromNow() }}
                             </td>
-                            <td class="text-right">
-                                <div class="dropdown">
-                                    <a class="btn btn-sm btn-icon-only text-light" href="#" role="button"
-                                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <i class="fa fa-ellipsis-v"></i>
-                                    </a>
-                                    <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                                        <a class="dropdown-item" href="#">Pin</a>
-                                    </div>
-                                </div>
-                            </td>
                         </tr>
                         {% endfor %}
                         </tbody>
@@ -210,8 +205,6 @@
 
             </div>
         </div>
-    </div>
-</div>
 {% endblock %}
 
 {% block scripts %}
@@ -220,25 +213,33 @@
 <script>
     clock();
 
-    $('#incidentTable').dataTable( {
-    "columnDefs": [
-        { "orderable": false, "targets": [0,7] }
-    ]
-    } );
-
     $(document).on('click', 'td', function () {
-        if (!$(this).hasClass('text-right')){
-            window.location = $(this).parent().data("href");
-        }
-    } );
-
+         window.location = $(this).parent().data("href");
+     });
 
     function clock() {
+        var zero = moment.unix(0)
         setInterval(function() {
-            var date = new Date(),
-                time = date.toLocaleTimeString();
-            $(".clock").html(time);
+                var seconds = Math.round(new Date().getTime()/1000) - {{ deployment.created_at.timestamp() }}
+                if (seconds < 60){
+                    var timeString = moment.unix(seconds).format('ss')
+                } else if (seconds < 3600){
+                    var timeString = moment.unix(seconds).format('mm:ss')
+                } else if (seconds < 86400){
+                    var timeString = moment.unix(seconds).format('hh:mm:ss')
+                } else {
+                    var momentVar = moment.unix(seconds)
+                    var timeString = momentVar.diff(zero, 'days') + ':' + momentVar.format('hh:mm:ss')
+                }
+            $(".clock").html(timeString);
         }, 1000);
     };
+</script>
+<script>
+    // Call the dataTables jQuery plugin
+$(document).ready(function() {
+  $('#dataTable').DataTable();
+});
+
 </script>
 {% endblock %}
