Redesigned some more pages.
* Redesigned 404 page.
* Redesigned login page.
* Redesigned deployments page.
* Added icons to buttons.
* Changed the tasks buttons to icons.

--- a/app/static/css/temp.css
+++ b/app/static/css/temp.css
@@ -52,3 +52,15 @@
 .fa-1fourx {
     font-size: 1.4em;
 }
+
+.btn.btn-icon-split {
+    margin-right: 0.2rem;
+}
+
+.edit-opacity {
+    opacity: 0.8;
+}
+
+.edit-margin {
+    margin-right: 0.4rem;
+}
