--- a/app/static/css/sb-admin-2.css
+++ b/app/static/css/sb-admin-2.css
@@ -10475,8 +10475,9 @@ a:focus {
   justify-content: center;
 }
 
-.btn-icon-split .icon {
-  background: rgba(0, 0, 0, 0.15);
+.btn-icon-split .btn-icon {
+  background: rgba(30, 27, 27, 0.08);
+  border-color: rgba(30, 27, 27, 0.08);
   display: inline-block;
   padding: 0.375rem 0.75rem;
 }
@@ -10570,24 +10571,6 @@ a:focus {
   .chart-pie {
     height: calc(20rem - 43px) !important;
   }
-}
-
-.bg-login-image {
-  background: url("https://source.unsplash.com/K4mSJ7kc0As/600x800");
-  background-position: center;
-  background-size: cover;
-}
-
-.bg-register-image {
-  background: url("https://source.unsplash.com/Mv9hjnEUHR4/600x800");
-  background-position: center;
-  background-size: cover;
-}
-
-.bg-password-image {
-  background: url("https://source.unsplash.com/oWTW-jNGl9I/600x800");
-  background-position: center;
-  background-size: cover;
 }
 
 form.user .custom-checkbox.small label {
