--- a/app/templates/deployments.html
+++ b/app/templates/deployments.html
@@ -1,22 +1,60 @@
 {% extends "base.html" %}
 
-{% block header %}
-
-
+{% block heading %}
+<a href="#newDeploymentForm" data-toggle="modal" data-target="newDeploymentFOrm" class="btn btn-icon-split btn-success mb-1">
+    <span class="btn-icon">
+        <i class="fas fa-plus"></i>
+    </span>
+    <span class="text">New Deployment</span>
+</a>
 {% endblock %}
 
 {% block body %}
 <div class="row">
+    <div class="col-xl-12 col-lg-10">
+            <div class="card shadow mb-4">
+                <div class="card-header d-flex align-items-center justify-content-between">
+                    <h6 class="font-weight-bold text-primary">Virtual Operations Support Team</h6>
+                </div>
+                <div class="card-body">
+                    <p class="font-weight-bold">This system is designed to ensure responding organisations can build shared situational awareness during multi-angency major or critical incidents.</p>
+                    <p>Shared Situational Awareness is achieved by sharing information and understandment of the circumstances between the involved organisations to build a stronger, multi-dimensional understanding of events, their implications, associated risks and potential outcomes. Responders cannot assume other emergency service personnel see things or say things in the same way they and a sustained effort is required to reach common view a common view and understanding of events, risk and their implications.</p>
+                    <p>Achieving shared situational awareness is essential for effective interopability.</p>
+                </div>
+            </div>
+        </div>
+</div>
+<div class="row">
     {% for deployment in deployments %}
-    <div class="col-lg-3 col-md-6">
-        <div class="card bg-gradient-secondary mb-4 mb-xl-0">
-          <div class="card-body text-center">
-            <h4 class="card-title text-left">{{ deployment.name }}</h4>
-              <hr class="my-2 {% if deployment.open_status %}bg-success{% else %}bg-danger{% endif %}">
-              <h6 class="card-text">Created {{ moment(deployment.created_at).fromNow() }}</h6>
-              <p class="card-text text-left">{{ deployment.description }}</p>
-            <a href="{{ url_for('view_incidents', deployment_name=deployment.name) }}" class="btn {% if deployment.open_status %}btn-success{% else %}btn-danger{% endif %}">View Deployment</a>
-          </div>
+    <div class="col-xl-4 col-lg-6">
+        <div class="card border-left-success shadow mb-4">
+            <div class="card-header d-flex align-items-center justify-content-between">
+                <h6 class="font-weight-bold text-primary">{{ deployment.name }}
+                    <p class="mb-0 mt-1 text-muted text-xs text-nowrap">Created {{ moment(deployment.created_at).fromNow() }}</p>
+                </h6>
+                <div class="dropdown no-arrow">
+                    <a class="dropdown-toggle" href="#" role="button" data-toggle="modal" data-target="#editOverviewModal">
+                        <i class="fas fa-cog"></i>
+                    </a>
+                    <div class="modal fade" id="editOverviewModal" tabindex="-1" role="dialog"
+                         aria-labelledby="editOverviewModal" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="editOverviewLabel">Edit Overview</h5>
+                                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">×</span>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card-body text-center">
+                <p class="font-weight-bold text-left">{{ deployment.description }}</p>
+                <a href="{{ url_for('view_incidents', deployment_name=deployment.name) }}" class="btn {% if deployment.open_status %}btn-success{% else %}btn-danger{% endif %}">View Deployment</a>
+            </div>
         </div>
     </div>
     {% endfor %}
