--- a/app/templates/incident.html
+++ b/app/templates/incident.html
@@ -1,9 +1,22 @@
 {% extends "base.html" %}
+{% block css %}
+<link rel="stylesheet" type="text/css" href="/static/css/temp.css">
+{% endblock %}
 
 {% block heading %}
 <div>
-    <button class="btn btn-warning" data-toggle="modal" data-target="#flagModal">Flag To Supervisor</button>
-    <button class="btn btn-success" data-toggle="modal" data-target="#markCompleteModal">Mark Incident Complete</button>
+    <a href="#flagModal" data-toggle="modal" data-target="#flagModal" class="btn btn-icon-split btn-warning mb-1">
+        <span class="btn-icon">
+            <i class="fas fa-flag"></i>
+        </span>
+        <span class="text">Flag To Supervisor</span>
+    </a>
+    <a href="#markCompleteModal" data-toggle="modal" data-target="#markCompleteModal" class="btn btn-icon-split btn-success mb-1">
+        <span class="btn-icon">
+            <i class="fas fa-check"></i>
+        </span>
+        <span class="text">Mark As Complete</span>
+    </a>
 </div>
 {% endblock %}
 
@@ -91,8 +104,7 @@
                 <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                         <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Last Updated</div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">{{ moment(incident.last_updated).fromNow()
-                            }}
+                        <div class="h5 mb-0 font-weight-bold text-gray-800">{{ moment(incident.last_updated).fromNow() }}
                         </div>
                     </div>
                     <div class="col-auto">
@@ -111,8 +123,7 @@
             <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                 <h6 class="m-0 font-weight-bold text-primary">Incident Overview</h6>
                 <div class="dropdown no-arrow">
-                    <a class="dropdown-toggle" href="#" role="button" data-toggle="modal"
-                       data-target="#editOverviewModal">
+                    <a class="dropdown-toggle" href="#" role="button" data-toggle="modal" data-target="#editOverviewModal">
                         <i class="fas fa-cog"></i>
                     </a>
                     <div class="modal fade" id="editOverviewModal" tabindex="-1" role="dialog"
@@ -139,8 +150,25 @@
     </div>
     <div class="col-xl-6 col-lg-7">
         <div class="card shadow mb-4">
-            <div class="card-header py-3 d-flex ">
+            <div class="card-header py-3 d-flex align-items-center justify-content-between">
                 <h6 class="m-0 font-weight-bold text-primary">Tasks</h6>
+                <div class="dropdown no-arrow">
+                    <a class="dropdown-toggle text-success" href="#" role="button" data-toggle="modal" data-target="#addTaskModal">
+                        <i class="fas fa-plus"></i>
+                    </a>
+                    <div class="modal fade" id="addTaskModal" tabindex="-1" role="dialog" aria-labelledby="addTaskModal" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="addTaskLabel">Add Task</h5>
+                                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">×</span>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             {% if incident.tasks %}
             <ul class="list-group">
@@ -154,55 +182,22 @@
                             <span class="text-xs">Assigned to {{ task.get_assigned() }}</span>
                         </div>
                         <div class="col-auto">
-                            <div class="custom-control custom-checkbox">
-                                <input class="formCheck-1" id="task{{ task.id }}" type="checkbox" {% if task.completed
-                                       %} checked{% endif %}{% if current_user not in task.allocated_to %} disabled{%
-                                       endif %}>
+                            <div class="custom-control custom-checkbox" disabled>
+                                <input class="edit-margin" id="task{{ task.id }}" type="checkbox"{% if task.completed %} checked{% endif %}{% if current_user not in task.allocated_to %} disabled{% endif %}>
+                                <a class="edit-opacity" href="#" role="button" data-toggle="modal" data-target="#editOverviewModal">
+                                    <i class="fas fa-edit"></i>
+                                </a>
                             </div>
                         </div>
                     </div>
                 </li>
                 {% endfor %}
             </ul>
-            <div class="card-body">
                 {% else %}
                 <div class="card-body">
                     <p class="card-text">No tasks currently.</p>
-                    {% endif %}
-                    <div class="float-right">
-                        <button class="btn btn-success" data-toggle="modal" data-target="#addTaskModal">Add Task
-                        </button>
-                        <div class="modal fade" id="addTaskModal" tabindex="-1" role="dialog"
-                             aria-labelledby="addTaskModal" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="addTaskLabel">Add Task</h5>
-                                        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">×</span>
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <button class="btn btn-warning" data-toggle="modal" data-target="#editTaskModal">Edit Task
-                        </button>
-                        <div class="modal fade" id="editTaskModal" tabindex="-1" role="dialog"
-                             aria-labelledby="editTaskModal" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="editTaskLabel">Edit Task</h5>
-                                        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">×</span>
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
-            </div>
+                    {% endif %}
         </div>
     </div>
 </div>
@@ -230,9 +225,7 @@
                         {% if incident.tasks %}
                         {% for task in incident.tasks %}
                         <div class="custom-control custom-checkbox mb-3">
-                            <input class="custom-control-input" id="customCheck2" type="checkbox" {% if task.completed
-                                   %} checked{% endif %}{% if current_user not in task.allocated_to %} disabled{% endif
-                                   %}>
+                            <input class="custom-control-input" id="customCheck2" type="checkbox" {% if task.completed %} checked{% endif %}{% if current_user not in task.allocated_to %} disabled{% endif %}>
                             <label class="custom-control-label" for="customCheck2">{{ task.name }}</label>
                         </div>
                         {% endfor %}
