--- a/app/templates/incidents.html
+++ b/app/templates/incidents.html
@@ -5,33 +5,32 @@
 {% endblock %}
 
 {% block heading %}
-<div >
-    <button class="btn btn-success" data-toggle="modal" data-target="#new-incident-form">New Incident</button>
-</div>
-<div class="modal fade" id="new-incident-form" tabindex="-1" role="dialog" aria-labelledby="new-incident-form"
+<a href="#newIncidentForm" data-toggle="modal" data-target="#newIncidentForm" class="btn btn-icon-split btn-success mb-1">
+    <span class="btn-icon">
+        <i class="fas fa-plus"></i>
+    </span>
+    <span class="text">New Incident</span>
+</a>
+<div class="modal fade" id="newIncidentForm" tabindex="-1" role="dialog" aria-labelledby="newIncidentForm"
      style="display: none;" aria-hidden="true">
-    <div class="modal-dialog  modal-dialog-centered modal-sm" role="document">
+    <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-body p-0">
-                <div class="card bg-secondary shadow border-0">
-                    <div class="card-body px-lg-5 py-lg-5">
-                        <div class="text-center text-muted mb-4">
-                            <h2>New Incident Report</h2>
-                        </div>
+                <div class="card shadow">
+                    <div class="card-header py-3 d-flex ">
+                <h6 class="m-0 font-weight-bold text-primary">New Incident Report</h6>
+            </div>
+                    <div class="card-body">
+
                         <form method="post" role="form">
                             {{ form.hidden_tag() }}
                             <div class="form-group mb-3">
-                                    <input class="form-control" name="name" placeholder="Incident Name" type="text">
+                                    <input class="form-control was-validated" name="name" placeholder="Incident Name" type="text" required>
                             </div>
-                            <div class="form-group">
-                                <div class="input-group input-group-alternative">
-                                    <div class="input-group-prepend">
-                                        <span class="input-group-text"></span>
-                                    </div>
+                            <div class="form-group mb-3">
                                     <input class="form-control" name="location" placeholder="Location" type="text">
                                 </div>
-                            </div>
-                            <textarea class="form-control form-control-alternative" rows="3" name="description"
+                            <textarea class="form-control" rows="3" name="description"
                                       placeholder="Description"></textarea>
                             <div class="text-center">
                                 <button type="submit" class="btn btn-primary my-4">Submit</button>
@@ -62,9 +61,9 @@
                     </div>
                   </div>
                     <p class="mt-3 mb-0 text-muted text-sm">
-                    <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
-                    <span class="text-nowrap">Since last hour</span>
-                </p>
+                        <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
+                        <span class="text-nowrap">Since last hour</span>
+                    </p>
                 </div>
               </div>
     </div>
@@ -89,7 +88,7 @@
                 </div>
               </div>
     </div>
-            <div class="col-xl-3 col-md-6 mb-8">
+            <div class="col-xl-3 col-md-6 mb-4">
               <div class="card border-left-success shadow">
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
@@ -108,6 +107,11 @@
               </div>
     </div>
 </div>
+<!--<div class="row justify-end">
+    <div class="col-sm-2 mb-3">
+        <button class="btn btn-success float-right" data-toggle="modal" data-target="#new-incident-form">New Incident</button>
+    </div>
+</div>-->
 <div class="card shadow mb-4">
             <div class="card-header py-3">
               <h6 class="m-0 font-weight-bold text-primary">Incidents</h6>
@@ -236,10 +240,9 @@
     };
 </script>
 <script>
-    // Call the dataTables jQuery plugin
+// Call the dataTables jQuery plugin
 $(document).ready(function() {
   $('#dataTable').DataTable();
 });
-
 </script>
 {% endblock %}
