--- a/app/templates/deployments.html
+++ b/app/templates/deployments.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block heading %}
-<a href="#newDeploymentForm" data-toggle="modal" data-target="newDeploymentFOrm" class="btn btn-icon-split btn-success mb-1">
+<a href="#newDeploymentForm" data-toggle="modal" data-target="newDeploymentFOrm" class="btn btn-icon-split btn-success mb-1 mt-2">
     <span class="btn-icon">
         <i class="fas fa-plus"></i>
     </span>
