Using AJAX for new incident report.
* Add logo to deployments page.
* Change mark completed button to mark incomplete when closed in the incident report page.

--- a/app/templates/deployments.html
+++ b/app/templates/deployments.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block heading %}
-<a href="#newDeploymentForm" data-toggle="modal" data-target="newDeploymentFOrm" class="btn btn-icon-split btn-success mb-1 mt-2">
+<a href="#newDeploymentModal" data-toggle="modal" data-target="newDeploymentModal" class="btn btn-icon-split btn-success mb-1 mt-2">
     <span class="btn-icon">
         <i class="fas fa-plus"></i>
     </span>
@@ -19,7 +19,7 @@
                 <div class="card-body">
                     <p class="font-weight-bold">This system is designed to ensure responding organisations can build shared situational awareness during multi-angency major or critical incidents.</p>
                     <p>Shared Situational Awareness is achieved by sharing information and understandment of the circumstances between the involved organisations to build a stronger, multi-dimensional understanding of events, their implications, associated risks and potential outcomes. Responders cannot assume other emergency service personnel see things or say things in the same way they and a sustained effort is required to reach common view a common view and understanding of events, risk and their implications.</p>
-                    <p>Achieving shared situational awareness is essential for effective interopability.</p>
+                    <p>Achieving shared situational awareness is essential for effective interoperability.</p>
                 </div>
             </div>
         </div>
