--- a/app/templates/incident.html
+++ b/app/templates/incident.html
@@ -11,12 +11,21 @@
         </span>
         <span class="text">Flag To Supervisor</span>
     </a>
+    {% if incident.open %}
     <a href="#markCompleteModal" data-toggle="modal" data-target="#markCompleteModal" class="btn btn-icon-split btn-success mb-1 mt-2">
         <span class="btn-icon">
             <i class="fas fa-check"></i>
         </span>
         <span class="text">Mark As Complete</span>
     </a>
+    {% else %}
+    <a href="#markIncompleteModal" data-toggle="modal" data-target="#markIncompleteModal" class="btn btn-icon-split btn-danger mb-1 mt-2">
+        <span class="btn-icon">
+            <i class="fas fa-check"></i>
+        </span>
+        <span class="text">Mark As Incomplete</span>
+    </a>
+    {% endif %}
 </div>
 {% endblock %}
 
