--- a/app/templates/incidents.html
+++ b/app/templates/incidents.html
@@ -5,14 +5,13 @@
 {% endblock %}
 
 {% block heading %}
-<a href="#newIncidentForm" data-toggle="modal" data-target="#newIncidentForm" class="btn btn-icon-split btn-success mb-1">
+<a href="#newIncidentModal" data-toggle="modal" data-target="#newIncidentModal" class="btn btn-icon-split btn-success mb-1">
     <span class="btn-icon">
         <i class="fas fa-plus"></i>
     </span>
     <span class="text">New Incident</span>
 </a>
-<div class="modal fade" id="newIncidentForm" tabindex="-1" role="dialog" aria-labelledby="newIncidentForm"
-     style="display: none;" aria-hidden="true">
+<div class="modal fade" id="newIncidentModal" tabindex="-1" role="dialog" aria-labelledby="newIncidentModal" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-body p-0">
@@ -21,8 +20,7 @@
                 <h6 class="m-0 font-weight-bold text-primary">New Incident Report</h6>
             </div>
                     <div class="card-body">
-
-                        <form method="post" role="form">
+                        <form id="newIncidentForm" method="post" role="form">
                             {{ form.hidden_tag() }}
                             <div class="form-group mb-3">
                                     <input class="form-control was-validated" name="name" placeholder="Incident Name" type="text" required>
@@ -203,13 +201,34 @@
         </div>
 
     </div>
-    </div>
+</div>
 {% endblock %}
 
 {% block scripts %}
 <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js "></script>
 <script>
+    //TODO
+    $('#newIncidentForm').submit( function(e) {
+       //prevent submit
+       e.preventDefault();
+       $('#newIncidentModal').modal('hide')
+
+       $.ajax({
+           data: $('#newIncidentForm').serialize(),
+           type: "POST",
+           url: "{{ url_for('add_incident', deployment_name=deployment_name) }}",
+           beforeSend: function(xhr, settings) {
+                if (!/^(GET|HEAD|OPTIONS|TRACE)$/i.test(settings.type) && !this.crossDomain) {
+                    xhr.setRequestHeader("X-CSRFToken", "{{ form.csrf_token._value() }}")
+                }
+            },
+           success: function(data){
+               $('#newIncidentForm').get(0).reset()
+               console.log(data);
+           }
+       });
+     });
     clock();
 
     $(document).on('click', 'td', function () {
