--- a/app/templates/incident.html
+++ b/app/templates/incident.html
@@ -19,7 +19,7 @@
         <span class="text">Mark As Complete</span>
     </a>
     {% else %}
-    <a href="#markIncompleteModal" data-toggle="modal" data-target="#markIncompleteModal" class="btn btn-icon-split btn-danger mb-1 mt-2">
+    <a href="#markIncompleteModal" data-toggle="modal" data-target="#markIncompleteModal" class="btn btn-icon-split btn-info mb-1 mt-2">
         <span class="btn-icon">
             <i class="fas fa-check"></i>
         </span>
