--- a/app/templates/incidents.html
+++ b/app/templates/incidents.html
@@ -59,7 +59,7 @@
                     </div>
                   </div>
                     <p class="mt-3 mb-0 text-muted text-sm">
-                        <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
+                        <span class="text-{{ incidents_percentage[0] }} mr-2"><i class="fa fa-{{ incidents_percentage[1] }}"></i> {{ incidents_percentage[2] }}%</span>
                         <span class="text-nowrap">Since last hour</span>
                     </p>
                 </div>
