Fix bug with the wrong button showing in the incident reports.

--- a/app/templates/incident.html
+++ b/app/templates/incident.html
@@ -11,7 +11,7 @@
         </span>
         <span class="text">Flag To Supervisor</span>
     </a>
-    {% if incident.open %}
+    {% if incident.open_status %}
     <a href="#markCompleteModal" data-toggle="modal" data-target="#markCompleteModal" class="btn btn-icon-split btn-success mb-1 mt-2">
         <span class="btn-icon">
             <i class="fas fa-check"></i>
