--- a/app/templates/incidents.html
+++ b/app/templates/incidents.html
@@ -21,7 +21,6 @@
             </div>
                     <div class="card-body">
                         <form id="newIncidentForm" method="post" role="form">
-                            {{ form.hidden_tag() }}
                             <div class="form-group mb-3">
                                 <input class="form-control was-validated" name="name" placeholder="Incident Name" type="text" required>
                             </div>
@@ -209,6 +208,7 @@
 <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js "></script>
 <script>
     //TODO
+    var csrf_token = "{{ csrf_token() }}";
     $('#newIncidentForm').submit( function(e) {
        e.preventDefault();
        $('#newIncidentModal').modal('hide')
@@ -219,7 +219,7 @@
            url: "{{ url_for('add_incident', deployment_name=deployment_name) }}",
            beforeSend: function(xhr, settings) {
                 if (!/^(GET|HEAD|OPTIONS|TRACE)$/i.test(settings.type) && !this.crossDomain) {
-                    xhr.setRequestHeader("X-CSRFToken", "{{ form.csrf_token._value() }}")
+                    xhr.setRequestHeader("X-CSRFToken", csrf_token)
                 }
             },
            success: function(data){
