--- a/app/templates/incidents.html
+++ b/app/templates/incidents.html
@@ -53,7 +53,7 @@
                     </div>
                     <div class="col-auto">
                       <div class="icon icon-shape bg-primary text-white rounded-circle shadow">
-                      <i class="fas fa-1fourx fa-file"></i>
+                      <i class="fas fa-1fourx fa-clone"></i>
                         </div>
                     </div>
                   </div>
